--- a/app/src/main/res/layout/activity_add_grid.xml
+++ b/app/src/main/res/layout/activity_add_grid.xml
@@ -65,17 +65,19 @@
             android:background="@drawable/style_button_white"
             android:text="@string/choose"
             tools:layout_editor_absoluteX="449dp"
-            tools:layout_editor_absoluteY="50dp" />
+            tools:layout_editor_absoluteY="50dp"
+            android:visibility="gone"/>
 
         <Spinner
             android:id="@+id/simpleSpinner"
             android:layout_width="fill_parent"
-            android:background="@drawable/style_button_white"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:background="@drawable/style_button_white" />
 
         <Button
             android:id="@+id/btn_add"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="16dp"
