--- a/app/src/main/res/drawable/color_gradient_blue_light.xml
+++ b/app/src/main/res/drawable/color_gradient_blue_light.xml
@@ -1,7 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <gradient
-        android:endColor="@color/colorBlueLight"
-        android:startColor="@color/colorBlue"
-        android:angle="180"/>
+android:shape="rectangle">
+<corners
+    android:radius="10dp" />
+<gradient
+    android:endColor="@color/colorBlueLight"
+    android:startColor="@color/colorBlue"
+    android:angle="180"/>
 </shape>
