--- a/app/src/main/res/drawable/color_gradient_faded_orange.xml
+++ b/app/src/main/res/drawable/color_gradient_faded_orange.xml
@@ -1,5 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <corners
+        android:radius="10dp" />
     <gradient
         android:endColor="@color/colorFadedOrange"
         android:startColor="@color/colorYellowish"
