--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -56,10 +56,7 @@
                         android:id="@+id/bt_record"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:clickable="true"
-                        app:backgroundTint="@android:color/holo_red_dark"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:backgroundTint="@color/color4" />
 
 
                     <fr.wildcodeschool.vyfe.StopWatch
