--- a/app/src/main/res/layout/activity_add_grid.xml
+++ b/app/src/main/res/layout/activity_add_grid.xml
@@ -43,18 +43,19 @@
                     android:layout_height="40dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:ems="10"
                     android:hint="@string/name_event"
                     android:inputType="textPersonName"
+                    android:maxHeight="400dp"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:textSize="20sp"
                     app:fontFamily="@font/roboto"
                     tools:layout_editor_absoluteX="116dp"
-                    tools:layout_editor_absoluteY="58dp"
-                    android:layout_marginStart="8dp" />
+                    tools:layout_editor_absoluteY="58dp" />
             </LinearLayout>
 
 
@@ -102,7 +103,7 @@
             android:id="@+id/btn_end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
