--- a/app/src/main/res/drawable/color_gradient_blue_dark.xml
+++ b/app/src/main/res/drawable/color_gradient_blue_dark.xml
@@ -6,4 +6,5 @@
         android:endColor="@color/colorBlueDark"
         android:startColor="@color/colorMagenta"
         android:angle="180"/>
+    <stroke android:width="1dp" android:color="@color/white" />
 </shape>
