--- a/app/src/main/res/drawable/color_gradient_green.xml
+++ b/app/src/main/res/drawable/color_gradient_green.xml
@@ -6,4 +6,5 @@
         android:endColor="@color/colorGreen"
         android:startColor="@color/colorGreenLight"
         android:angle="180"/>
+    <stroke android:width="1dp" android:color="@color/white" />
 </shape>
