--- a/app/src/main/res/drawable/color_gradient_rosy.xml
+++ b/app/src/main/res/drawable/color_gradient_rosy.xml
@@ -6,4 +6,5 @@
         android:endColor="@color/colorRosy"
         android:startColor="@color/colorOrange"
         android:angle="180"/>
+    <stroke android:width="1dp" android:color="@color/white" />
 </shape>
