--- a/app/src/main/res/layout-land/activity_play_video.xml
+++ b/app/src/main/res/layout-land/activity_play_video.xml
@@ -33,7 +33,7 @@
         android:id="@+id/constraint_video"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,57 +54,52 @@
             android:id="@+id/video_control"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="41dp"
-            android:layout_marginTop="8dp"
             android:orientation="vertical"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/timeline"
+            app:layout_constraintBottom_toBottomOf="@+id/video_view_selected"
             app:layout_constraintEnd_toStartOf="@+id/tag_list_view"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="@+id/video_view_selected">
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/bt_play_selected"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp"
+                android:layout_margin="8dp"
                 android:layout_marginEnd="40dp"
                 android:clickable="true"
+                android:focusable="true"
                 android:src="@android:drawable/ic_media_play"
                 app:backgroundTint="@color/color12"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginRight="40dp"
-                android:focusable="true" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/bt_replay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp"
+                android:layout_margin="8dp"
                 android:layout_marginEnd="40dp"
                 android:clickable="true"
+                android:focusable="true"
                 android:longClickable="false"
                 app:backgroundTint="@color/color2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/bt_play_selected"
-                app:srcCompat="@drawable/replay_black"
-                android:layout_marginRight="40dp"
-                android:focusable="true" />
+                app:srcCompat="@drawable/replay_black" />
 
             <fr.wildcodeschool.vyfe.StopWatch
                 android:id="@+id/chronometer_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp"
+                android:layout_margin="8dp"
                 android:layout_marginEnd="40dp"
                 android:background="@color/colorCharcoal"
                 android:padding="10dp"
                 android:textColor="@color/colorFadedOrange"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bt_replay"
-                android:layout_marginRight="40dp" />
+                app:layout_constraintTop_toBottomOf="@+id/bt_replay" />
         </LinearLayout>
 
         <ScrollView
@@ -133,6 +128,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
                     android:clickable="false"
                     android:focusable="false"
@@ -143,8 +139,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_alignParentRight="true" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </RelativeLayout>
         </ScrollView>
