--- a/app/src/main/res/drawable/color_gradient_blue_light.xml
+++ b/app/src/main/res/drawable/color_gradient_blue_light.xml
@@ -6,5 +6,5 @@ android:shape="rectangle">
     android:endColor="@color/colorBlueLight"
     android:startColor="@color/colorBlue"
     android:angle="180"/>
-    <stroke android:width="1dp" android:color="@color/white" />
+    <stroke android:width="1dp" android:color="@color/colorCharcoal" />
 </shape>
