--- a/app/src/main/res/drawable/color_gradient_grey.xml
+++ b/app/src/main/res/drawable/color_gradient_grey.xml
@@ -6,5 +6,5 @@
         android:endColor="@color/colorGrey"
         android:startColor="@color/colorGreyDrak"
         android:angle="180"/>
-    <stroke android:width="1dp" android:color="@color/white" />
+    <stroke android:width="1dp" android:color="@color/colorCharcoal" />
 </shape>
