--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -2,65 +2,62 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/view_foreground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
-    tools:layout_editor_absoluteY="25dp"
-    android:orientation="horizontal"
     android:background="@drawable/tag"
-    android:id="@+id/view_foreground">
+    android:orientation="horizontal"
+    tools:layout_editor_absoluteY="25dp">
 
 
-        <ImageView
-            android:id="@+id/iv_color"
-            android:layout_width="10dp"
-            android:layout_height="match_parent"
-            android:background="@android:color/holo_blue_light"
-             />
+    <ImageView
+        android:id="@+id/iv_color"
+        android:layout_width="10dp"
+        android:layout_height="match_parent"
+        android:background="@android:color/holo_blue_light" />
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_name"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            >
+            android:singleLine="false"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:fontFamily="@font/roboto"
+            tools:text="@string/name_observation" />
 
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                tools:text="@string/name_observation"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:fontFamily="@font/roboto"
-                android:singleLine="false"
-               />
-
-            <TextView
-                android:id="@+id/tv_stats"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center_vertical"
-                android:textColor="@android:color/white"
-                android:visibility="visible"
-                app:fontFamily="@font/roboto"
-                tools:text="4"
-                tools:visibility="visible" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_stats"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center_vertical"
+            android:textColor="@android:color/white"
+            android:visibility="visible"
+            app:fontFamily="@font/roboto"
+            tools:text="4"
+            tools:visibility="visible" />
+    </LinearLayout>
 
 </LinearLayout>
