--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -234,7 +234,7 @@
                     android:text="@string/restart_session"
                     android:textColor="@color/white"
                     android:textSize="18sp"
-                    android:visibility="visible" />
+                    android:visibility="invisible" />
             </LinearLayout>
         </android.support.constraint.ConstraintLayout>
     </android.support.constraint.ConstraintLayout>
