--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -58,6 +58,15 @@
             app:fontFamily="@font/roboto"
             tools:text="4"
             tools:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/iv_menu"
+            android:visibility="gone"
+            android:layout_marginRight="10dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/icons8_menu_filled_500" />
+
     </LinearLayout>
 
 </LinearLayout>
