--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -62,10 +62,12 @@
         <ImageView
             android:id="@+id/iv_menu"
             android:visibility="gone"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/icons8_menu_filled_500" />
+            android:src="@drawable/arrows" />
 
     </LinearLayout>
 
