--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -32,8 +32,9 @@
 
                 <FrameLayout
                     android:id="@+id/video_view"
-                    android:layout_width="0dp"
-                    android:layout_height="200dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    app:layout_constraintDimensionRatio="1920:1080"
                     app:layout_constraintEnd_toEndOf="@+id/video_control"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
