--- a/app/src/main/res/layout-land/activity_connexion.xml
+++ b/app/src/main/res/layout-land/activity_connexion.xml
@@ -20,11 +20,10 @@
 
             <ImageView
                 android:id="@+id/iv_flag"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="45dp"
                 android:layout_gravity="end"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginRight="5dp"
                 android:background="@drawable/icons8_france_96" />
 
             <ImageView
