--- a/app/src/main/res/layout/activity_add_grid.xml
+++ b/app/src/main/res/layout/activity_add_grid.xml
@@ -76,8 +76,9 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
-                android:background="@drawable/style_button_white"
+                android:background="@drawable/style_button"
                 android:text="@string/add_tag"
+                android:textColor="@color/white"
                 tools:layout_editor_absoluteX="449dp"
                 tools:layout_editor_absoluteY="50dp"
                 android:layout_weight="0.2"/>
@@ -109,11 +110,11 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/style_button"
             android:padding="5dp"
             android:text="@string/end"
-            android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textColor="@color/black_de"
+            android:textSize="16sp"
+            android:background="@drawable/style_button_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recycler_view" />
