affichage place dispo

--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -43,15 +43,15 @@
 
                 <TextView
                     android:id="@+id/tv_space"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:textColor="@color/common_google_signin_btn_text_dark_default"
                     app:fontFamily="@font/roboto"
                     app:layout_constraintBottom_toTopOf="@+id/scrollView3"
-                    app:layout_constraintEnd_toEndOf="@+id/video_control" />
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <LinearLayout
                     android:id="@+id/video_control"
