--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -161,11 +161,34 @@
                             android:textSize="20sp"
                             app:fontFamily="@font/roboto_bold" />
                     </LinearLayout>
-
                     <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
+                        android:id="@+id/btn_create_grid"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_margin="15dp"
+                        android:layout_weight="1"
+                        android:background="@color/colorCharcoalGrey">
+
+                        <ImageView
+                            android:id="@+id/create_grid"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_gravity="center_vertical"
+                            android:paddingLeft="15dp"
+                            app:srcCompat="@drawable/icons8_liste_de_v_rification_filled_100" />
+
+                        <TextView
+                            android:id="@+id/prepared_session"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="16dp"
+                            android:text="Préparer une session"
+                            android:textColor="@color/white"
+                            android:textSize="20sp"
+                            app:fontFamily="@font/roboto_bold" />
+                    </LinearLayout>
+
 
                 </LinearLayout>
             </LinearLayout>
