--- a/app/src/main/res/layout-land/fragment_create_grid.xml
+++ b/app/src/main/res/layout-land/fragment_create_grid.xml
@@ -63,7 +63,7 @@
                         app:fontFamily="@font/roboto" />
 
                     <EditText
-                        android:id="@+id/et_grid_title"
+                        android:id="@+id/et_grid_title2"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
                         android:layout_gravity="center_horizontal"
@@ -127,7 +127,7 @@
                     tools:visibility="visible" />
 
                 <Button
-                    android:id="@+id/btn_connected"
+                    android:id="@+id/btn_save_session"
                     style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
