--- a/app/src/main/res/drawable/color_gradient_green_lightgreen.xml
+++ b/app/src/main/res/drawable/color_gradient_green_lightgreen.xml
@@ -3,7 +3,7 @@
     <corners
         android:radius="10dp" />
     <gradient
-        android:endColor="#FF4A6544"
+        android:endColor="#4A6544"
         android:startColor="@color/color7"
         android:angle="180"/>
     <stroke android:width="1dp" android:color="@color/colorCharcoal" />
