--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -6,6 +6,7 @@
         android:id="@+id/home"
         android:icon="@drawable/home"
         android:title="Home"
+        android:visible="true"
         app:showAsAction="ifRoom"/>
 
 
