--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -61,13 +61,13 @@
 
         <ImageView
             android:id="@+id/iv_menu"
-            android:visibility="gone"
-            android:layout_marginRight="15dp"
+            android:visibility="visible"
+            android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/arrows" />
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/icons8_trier_52" />
 
     </LinearLayout>
 
